Fix maintainer name overflow elements

--- a/ckanext/hdx_request_data/fanstatic/css/request-data.css
+++ b/ckanext/hdx_request_data/fanstatic/css/request-data.css
@@ -253,7 +253,7 @@ h4{
 
 .sysadmin-requests-container__dropdown > div > label {
   left: 30px;
-  width: 170px;
+  width: 90%;
 }
 
 .sysadmin-requests-container__dropdown-buttons {
